--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "framer-motion": "^6",
+    "phosphor-react": "^1.4.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
